--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   qq-farm-bot:
     # 直接拉取线上镜像，实现秒级启动
-    # 【注意】请将下面的 your_dockerhub_username 替换为您实际的 DockerHub 用户名
+    # 【注意】请将下面的 maile456 替换为您实际的 DockerHub 用户名
     image: maile456/qq-farm-bot:latest
     container_name: qq-farm-bot
     restart: unless-stopped
